<package format="2">
  <name>mocap_ros_utils</name>
  <version>0.1.0</version>
  <description>
    ROS-based utilities for motion capture
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/mocap_ros_utils</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_array_msgs</depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_array_rviz_plugins</exec_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>graphviz</doc_depend>
</package>
